2009-07-09  Axel Waggershauser  <awagger@web.de>

	* config.c: some unnecessary debuglines removed.
	* config.c: Decode EOS battery charge value.

2009-07-10  Marcus Meissner  <marcus@jet.franken.de>

        * ptp.c,ptp.h: Generic PTP wrapper function (no data, no output)
          to avoid coding all generic functions as seperate functions.
          Started converting functions to macros.

2009-07-09  Axel Waggershauser  <awagger@web.de>

	* ptp.c: Some sprintf format adjustments.
	* ptp.h: EOS_RemoteRelease doc comments.
	* config.c: More Canon ISO and FStop values for the Canon 5D Mark II.
	* ptp-pack.c,library.c: More EOS debugging output.
	* config.c: Added AEB and DriveMode configuration.
	* ptp.c,ptp.h: Added ptp_canon_eos_requestdevicepropvalue()
	* config.c: request some string types, handle owner, artist,
	  copyright, lensname, serialnr, shuttercount, availableshots
	* ptp.c: decode EOS strings better
	* ptp-pack.c: dpd.GetSet adjustments.
	* ptp-pack.c,config.c,ptp.c: Implemented EOS ImageSize and ImageFormat handling.

2009-05-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c,ptp.c,ptp.h: Enhanced EOS event decoding.
	* ptp.c: Handle wrong sequence number on startup.
	* config.c: EOS camera capturetarget support (card capture not
	  yet working)

	* library.c: Added new ids for:
		- Kodak V803, M1063
		- Canon PowerShot A650IS, SD990 (aka IXUS 980IS), SD880IS, A480
		- Canon EOS 50D
		- Fuji FinePix S1000fd
	* library.c: Enable EOS capture mode automatically on --capture-image.
	* library.c: Implemented basic EOS LiveView support.
	* library.c: Handle new raw Canon images.
	* library.c: MIME Type of previews might be different than of main image.
	* music-players.h: Merged from libmtp.

2009-03-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h: use Nikon Get Vendor Extension Codes
	  call instead of fixed lists. Removed static lists.

	* library.c: In wait_event, handle Nikon cameras with Check Event