@@ -1,7 +1,8 @@
-2009-07-09  Axel Waggershauser  <awagger@web.de>
+2009-07-15  Axel Waggershauser  <awagger@web.de>
 
 	* config.c: some unnecessary debuglines removed.
 	* config.c: Decode EOS battery charge value.
+	* config.c,library.c: support for 'online-updates' of capturetarget for EOS
 
 2009-07-10  Marcus Meissner  <marcus@jet.franken.de>
 
